# golem_dotmatrix

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
src/golem_dotmatrix/: __init__.py  __main__.py  cfg.py  dotmatrix.py  logger.py  usb.py  watchdog.py
tests/: test_printer.py  test_usb.py  test_watchdog.py
