[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "golem_dotmatrix"
version = "0.1.0"
description = "Simple set of code to run on a raspberry pi and drive a dotmatrix printer."
dependencies = [
	"pyusb",
	"structlog",
	"requests",
	'hacutils @ git+https://github.com/henryotoole/hacutils',
	'dispatch_client_py @ git+https://github.com/henryotoole/dispatch_client_py'
]
authors = [
	{name = "Josh Reed"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
	'Operating System :: POSIX :: Linux',
	'Programming Language :: Python :: 3',
	'Intended Audience :: Developers'
]

[project.urls]
Repository = "https://github.com/henryotoole/restlink"

[project.optional-dependencies]
test = [
	'pytest',
]